Add : artifact upload 로직 추가

--- a/.github/workflows/basic-build.yaml
+++ b/.github/workflows/basic-build.yaml
@@ -1,6 +1,11 @@
 name: basic build
 
 on:
+  workflow_call:
+    outputs:
+      artifact-key:
+        description: 'build file artifact key'
+        value: ${{ jobs.build.outputs.artifact-key }}
   workflow_dispatch:
   push:
     branches:
@@ -8,9 +13,14 @@ on:
     paths:
       - .github/workflows/basic-build.yaml
 
+env:
+  artifact-key: ${{ github.repository }}-${{ github.sha }}-build-output
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      artifact-key: ${{ env.artifact-key }}
     steps:
       - name: check out source repo
         uses: actions/checkout@v4
@@ -33,3 +43,11 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew clean build
+
+      - name: upload jar
+        uses: actions/upload-artifact@v3
+        if: github.event_name == 'workflow_call'
+        with:
+          name: ${{ env.artifact-key}}
+          path: build/libs/app-0.0.1-SNAPSHOT.jar
+          retention-days: 1
