--- a/.github/workflows/basic-build.yaml
+++ b/.github/workflows/basic-build.yaml
@@ -59,5 +59,5 @@ jobs:
         if: inputs.is_workflow_call
         with:
           name: ${{ env.artifact-key }}
-          path: build/libs/app-0.0.1-SNAPSHOT.jar
+          path: ./build/libs/app-0.0.1-SNAPSHOT.jar
           retention-days: 1
