Fix : Actions - artifact key 수정

--- a/.github/workflows/basic-build.yaml
+++ b/.github/workflows/basic-build.yaml
@@ -20,7 +20,7 @@ on:
       - .github/workflows/basic-build.yaml
 
 env:
-  artifact-key: ${{ github.repository }}-${{ github.sha }}-build-output
+  artifact-key: ${{ github.repository_id }}-${{ github.sha }}-build-output
 
 jobs:
   build:
