Fix : Actions - docker build platforms 수정

--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -48,5 +48,6 @@ jobs:
           context: ${{ env.checkout-path }}
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ vars.REPOSITORY }}:v1.0.0
+          platforms: linux/amd64, linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
