--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: ${{ needs.build-jar.outputs.artifact-key }}
-          path: 2121/build/libs
+          path: ${{ env.checkout-path }}
 
       ## 도커 빌드 및 업로드
       - name: docker build and push
