--- a/.github/workflows/docker-image-build.yaml
+++ b/.github/workflows/docker-image-build.yaml
@@ -2,6 +2,16 @@ name: docker-image-build
 
 on:
   workflow_dispatch:
+  workflow_call:
+    inputs:
+      checkout-path:
+        description: 'checkout path'
+        type: string
+        default: 2121/build/docker
+    outputs:
+      image-tag:
+        description: 'docker image tag'
+        value: ${{ jobs.build-docker-image.outputs.image-tag }}
   push:
     branches:
       - main
@@ -10,7 +20,8 @@ on:
       - .github/workflows/basic-build.yaml
 
 env:
-  checkout-path: 2121/build/docker
+  checkout-path: ${{inputs.checkout-path || '2121/build/docker'}}
+  image-tag: ${{ secrets.DOCKER_USERNAME }}/${{ vars.REPOSITORY }}:v1.0.0
 
 jobs:
   build-jar:
@@ -20,6 +31,8 @@ jobs:
   build-docker-image:
     runs-on: ubuntu-latest
     needs: build-jar
+    outputs:
+      image-tag: ${{ env.image-tag }}
     steps:
       # 도커 세팅
       - uses: docker/setup-qemu-action@v3
@@ -47,7 +60,7 @@ jobs:
         with:
           context: ${{ env.checkout-path }}
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ vars.REPOSITORY }}:v1.0.0
+          tags: ${{ env.image-tag }}
           platforms: linux/amd64, linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
