Chore : Actions - k version 추가

--- a/.github/workflows/k8s-deploy.yaml
+++ b/.github/workflows/k8s-deploy.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: ${{ env.checkout-path }}
-      - name: setup kubectle
+      - name: setup kubectl
         uses: azure/setup-kubectl@v3
         with:
           version: ${{matrix.kubectl-version}}
@@ -46,6 +46,7 @@ jobs:
       - name: deploy to k8s
         working-directory: ${{env.checkout-path}}
         run: |
+          kubectl version --client
           kubectl get po -A
           kubectl apply -f ./namespace.yaml
           kubectl apply -f ./pv.yaml
