--- a/.github/workflows/k8s-deploy.yaml
+++ b/.github/workflows/k8s-deploy.yaml
@@ -56,3 +56,7 @@ jobs:
           kubectl apply -f ./service.yaml
           kubectl apply -f ./hpa.yaml
           kubectl apply -f ./deployment.yaml
+
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        if: failure()
