Fix(helm) : 4.addition

--- a/2221/deploy/helm/4.addition/my-api-tester/templates/deployment.yaml
+++ b/2221/deploy/helm/4.addition/my-api-tester/templates/deployment.yaml
@@ -40,6 +40,9 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
+          envFrom:
+            - configMapRef:
+                name: {{ include "my-api-tester.fullname" . }}-properties
           startupProbe:
             {{- toYaml .Values.probe.startupProbe | nindent 12 }}
           livenessProbe:
