Fix(helm) : 4.addition
(values.yaml).image.repository에 잘못 작성된 tag 제거
(secret.yaml).data -> stringData 변경

--- a/2221/deploy/helm/4.addition/my-api-tester/templates/secret.yaml
+++ b/2221/deploy/helm/4.addition/my-api-tester/templates/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: {{ include "my-api-tester.fullname" . }}-postgresql
   labels:
     {{- include "my-api-tester.labels" . | nindent 4 }}
-data:
+stringData:
   {{- toYaml .Values.secret.data.properties.postgresql | nindent 2 }}
