--- a/2221/deploy/helm/4.addition/my-api-tester/values.yaml
+++ b/2221/deploy/helm/4.addition/my-api-tester/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 2
 
 image:
-  repository: 1pro/api-tester:v1.0.0
+  repository: 1pro/api-tester
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -103,10 +103,10 @@ autoscaling:
   # targetMemoryUtilizationPercentage: 80
 
 # Additional volumes on the output Deployment definition.
-volumes: 
+volumes:
   - name: secret-datasource
     secret:
-      secretName: api-tester-2221-postgresql
+      secretName: api-tester-2221-my-api-tester-postgresql
 
 # Additional volumeMounts on the output Deployment definition.
 volumeMounts:
