--- a/2231/deploy/k8s/pv.yaml
+++ b/2231/deploy/k8s/pv.yaml
@@ -21,4 +21,4 @@ spec:
     required:
       nodeSelectorTerms:
         - matchExpressions:
-            - {key: kubernetes.io/hostname, operator: In, values: [k8s-master]}
+            - {key: kubernetes.io/hostname, operator: In, values: [10.0.10.173]}
