Fix(pvc) : k8s pvc class 수정

--- a/2231/deploy/k8s/pvc.yaml
+++ b/2231/deploy/k8s/pvc.yaml
@@ -10,6 +10,7 @@ metadata:
     version: 1.0.0
     managed-by: kubectl
 spec:
+  storageClassName: oci
   resources:
     requests:
       storage: 2G
